--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
+<script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_detection/face_detection.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"></script>
+
   <meta charset="UTF-8">
   <title>Mask Detection Web App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,6 +20,7 @@
   <h2>😷 ระบบตรวจจับการสวมหน้ากากอนามัย</h2>
 
   <div id="camera-container"></div>
+  <canvas id="overlay"></canvas>
 
   <div id="result">
     กำลังโหลดโมเดล...
