--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
+<head>
   <meta charset="UTF-8">
   <title>Mask Detection Web App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- TensorFlow -->
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.16.0/dist/tf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
 
   <!-- Teachable Machine -->
-  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest"></script>
+
+  <!-- MediaPipe -->
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_detection/face_detection.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"></script>
+
+  <link rel="stylesheet" href="style.css">
+</head>
 
 </head>
 <body>
 
-<h2>Mask Detection Test</h2>
+  <h2>😷 ระบบตรวจจับการสวมหน้ากากอนามัย</h2>
 
-<div id="camera-container"></div>
-<div id="result">Loading...</div>
+  <div id="camera-container"></div>
+  <canvas id="overlay"></canvas>
 
-<script src="script.js"></script>
+  <div id="result">
+    กำลังโหลดโมเดล...
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
