--- a/index.html
+++ b/index.html
@@ -19,10 +19,18 @@
 
   <button onclick="init()">เริ่มใช้งานกล้อง</button>
 
-  <div id="camera-container"></div>
+  <div class="app">
 
-  <div id="result">ยังไม่เริ่ม</div>
+    <div id="camera-container"></div>
+
+    <div id="result" class="result-box">
+      รอการตรวจจับ...
+    </div>
+
+  </div>
 
   <script src="script.js"></script>
 </body>
+
 </html>
+
